--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Girvin Junod</title>
+    <meta name="author" content="Girvin Junod" />
+    <meta name="description" content="Girvin Junod's Portfolio Website" />
+    <title>Girvin Junod - Portfolio</title>
     <style>
       html {
         overflow: hidden;
